<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        android:padding="8dp">


        <RelativeLayout
            android:id="@+id/ll_device_setting"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_centerInParent="true"

                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/OSD_Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </TextView>


        </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_margin="10dp"
        android:id="@+id/osd_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <RadioButton
            android:layout_marginLeft="50dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/osd_enlarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zoom_Times"
            android:textSize="14sp" />


        <RadioButton

            android:layout_marginLeft="230dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/osd_fov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FOV"
            android:textSize="14sp" />


    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <RadioButton
            android:layout_marginLeft="50dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/osd_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GPS"
            android:textSize="14sp" />


        <RadioButton

            android:layout_marginLeft="230dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/osd_mgrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MGRS"
            android:textSize="14sp" />
    </RelativeLayout>

        <View
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:background="#353535"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20">

        <TextView

            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/Time_Zone"/>

        <Spinner
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_15"
            android:textColor="#FFFFFF"
            android:id="@+id/spinnerTimeZone"
            style="@style/spinnerStyles" />

    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20">

            <Button
                android:visibility="invisible"
                android:layout_height="40dp"
                style="@style/testStyle1"
                android:text="@string/Refresh"
                android:textSize="14sp" />

            <Button
                android:layout_marginRight="@dimen/dp_5"
                android:layout_height="40dp"
                android:id="@+id/osd_save"
                style="@style/testStyle1"
                android:layout_marginLeft="3dp"
                android:text="@string/Save"
                android:textSize="14sp" />


            <Button

                android:layout_height="40dp"
                android:id="@+id/osd_refresh"
                style="@style/testStyle1"
                android:layout_marginLeft="5dp"
                android:text="@string/Refresh"
                android:textSize="14sp" />


            <Button
                android:visibility="invisible"

                android:layout_height="40dp"
                style="@style/testStyle1"
                android:text="@string/Save"
                android:textSize="14sp" />


        </LinearLayout>



    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <View style="@style/testStyle1" />

        <Button

            android:layout_height="40dp"
            android:id="@+id/osd_refreshs"
            style="@style/testStyle1"
            android:layout_marginRight="10dp"
            android:text="@string/Refresh"
            android:textSize="14sp" />

        <Button

            android:layout_height="40dp"
            android:id="@+id/osd_saves"
            style="@style/testStyle1"
            android:layout_marginLeft="10dp"
            android:text="@string/Save"
            android:textSize="14sp" />

        <View style="@style/testStyle1" />
    </LinearLayout>




    </LinearLayout>
</android.support.v4.widget.NestedScrollView>